# YESciEval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  batch_inference.py  build_experimental_datasets.py  combine_train_datasets.py  confusion-plots.ipynb  inference.py  pyproject.toml  qa_train_test_split.py  readthedocs.yml  refactor_dataset.py  reinforcement_learning.py  requirements.txt  setup.py  supervised_finetuning.py  test.py
.github/workflows/: python-publish.yml  test-package.yml
dataset/BioASQ/: train_test_split_ids.json
dataset/ORKG-Synthesis/: train_test_split_ids.json
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  judges.rst  quickstart.rst  rubrics.rst
experiments/: .env-example  README.md  batch_inference.py  combine_train_datasets.py  plots.ipynb  refactor_dataset.py  supervised_finetuning.py
experiments/dataset/: README.md
experiments/generator/: adversarial_creation.py  pubmed_fetching.py  qualitative_eval.py  quantitative_eval.py  synthesis_generation.py
experiments/notebooks/: confusion-plots.ipynb  plot-line-chart.ipynb
experiments/sciqaeval/: config.py  dataset.py  llm_loader.py
generator/: qualitative_eval_cleanup.py  qualitative_eval_data_extraction.py  quantitative_eval_data_extraction.py
sciqaeval/: prompt.py  utils.py
sciqaeval/prompts/: Coherence.txt  Completeness.txt  Conciseness.txt  Correctness.txt  Informativeness.txt  Integration.txt  Readability.txt
test/: test_rubrics.py
trash/: main_eval.py
yescieval/: __init__.py
(+104 files in other folders)
